<resources>
    <string name="app_name">light browser</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="favor">favorite</string>
    <string name="favor_success">favorite success</string>
    <string name="recent_search">Recent search</string>
    <string name="baidu">Baidu</string>
    <string name="sougou">Sogou</string>
    <string name="google">Google</string>
    <string name="bing">Bing</string>
    <string name="enter_internet_url">Enter keywords or URL</string>
    <string name="quickVisit">Quick Visit</string>
    <string name="recentVisit">Recent Visit</string>
    <string name="copy_success">Copy successfully</string>
    <string name="switch_theme">Switch the night mode</string>
    <string name="about_me">About me</string>
    <string name="about_me_desc">I am a student at school, I hope that the search becomes easier and faster, and I also hope that it can bring convenience to you. It is not easy to create, please support</string>
    <string name="reward_me">Reward author</string>
    <string name="paypal_ali_desc">Alipay</string>
    <string name="paypal_wechat_desc">WeChat</string>
    <string name="save_to_gallery">save to gallery!</string>

    <string name="contact_me_email" translatable="false">itachsheep045@gmail.com</string>
    <string name="paypal_link_desc" translatable="false">PayPal.Me</string>
    <string name="paypal_link" translatable="false">https://paypal.me/itachsheep?...</string>
    <string name="srl_header_pulling" translatable="false">下拉可以刷新</string>
    <string name="srl_header_release" translatable="false">释放立即刷新</string>
    <string name="srl_footer_refreshing" translatable="false">正在刷新…</string>
    <string name="srl_header_refreshing" translatable="false">正在刷新…</string>
    <string name="srl_footer_loading" translatable="false">正在加载…</string>
    <string name="srl_header_loading" translatable="false">正在加载…</string>
    <string name="srl_header_finish" translatable="false">刷新完成</string>
    <string name="srl_header_failed" translatable="false">刷新失败</string>
    <string name="srl_header_update" translatable="false">上次更新 M-d HH:mm</string>
</resources>