<?xml version="1.0" encoding="utf-8"?>
<com.tw.speedbrowser.base.widget.SleConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/len_240"
    android:id="@+id/sdl_container"
    app:sle_cornersTopLeftRadius="@dimen/len_10"
    android:paddingHorizontal="@dimen/len_15"
    app:sle_cornersTopRightRadius="@dimen/len_10"
    app:sle_normalBackgroundColor="@color/color_D9D9D9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llSwitchTheme"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/len_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/svg_dark_theme"
                android:paddingHorizontal="@dimen/len_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.tw.speedbrowser.base.widget.SleTextButton
                android:id="@+id/stbThemeDesc"
                android:text="@string/switch_theme"
                android:textSize="@dimen/font_15"
                android:textColor="@color/text_1_1A1A1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_theme"
                app:layout_constraintTop_toTopOf="@id/iv_theme"
                app:layout_constraintBottom_toBottomOf="@id/iv_theme"/>

        </LinearLayout>




        <com.tw.speedbrowser.base.widget.SleTextButton
            android:id="@+id/aboutMeTitle"
            android:layout_marginTop="@dimen/len_10"
            android:paddingHorizontal="@dimen/len_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_15"
            android:textColor="@color/text_1_1A1A1A"
            app:sle_textStyle="bold"
            android:text="@string/about_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSwitchTheme"/>

        <com.tw.speedbrowser.base.widget.SleTextButton
            android:id="@+id/aboutMeDesc"
            android:paddingHorizontal="@dimen/len_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_15"
            android:textColor="@color/text_3_999999"
            android:text="@string/about_me_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutMeTitle"/>

        <LinearLayout
            android:paddingVertical="@dimen/len_10"
            android:id="@+id/llContactMe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutMeDesc"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mIvEmail"
                android:src="@drawable/svg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/len_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_theme"/>

            <com.tw.speedbrowser.base.widget.SleTextButton
                android:id="@+id/stbContactEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_15"
                android:textColor="@color/style_blue_2A54FF"
                android:text="@string/contact_me_email"
                app:layout_constraintStart_toEndOf="@id/mIvEmail"
                app:layout_constraintTop_toTopOf="@id/mIvEmail"
                app:layout_constraintBottom_toBottomOf="@id/mIvEmail"/>


            <ImageView
                android:paddingHorizontal="@dimen/len_10"
                android:id="@+id/mIvCopy"
                android:src="@mipmap/ic_new_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/stbContactEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mIvEmail"
                app:layout_constraintBottom_toBottomOf="@id/mIvEmail"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.tw.speedbrowser.base.widget.SleTextButton
        android:id="@+id/reward"
        android:paddingVertical="@dimen/len_5"
        android:paddingHorizontal="@dimen/len_20"
        android:layout_marginBottom="@dimen/len_10"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_15"
        android:textColor="@color/light_color_white_FFFFFF"
        app:sle_textStyle="bold"
        android:text="@string/reward_me"
        app:sle_cornersRadius="@dimen/len_20"
        app:sle_normalBackgroundColor="@color/reward_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</com.tw.speedbrowser.base.widget.SleConstraintLayout>